Fix issue where translated language was not showing

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -153,7 +153,7 @@ h3, h4, h5, p {
   color:white;
 }
 
-.textarea-comment:focus, .textarea-user:focus{
+.textarea-comment:focus, .textarea-user:focus, #language:focus{
   outline: none;
   border: 2px solid #555;
   background-color: white;
@@ -179,6 +179,16 @@ h3, h4, h5, p {
   overflow: hidden;
   min-height: 20px;
   line-height: 20px;
+  font-family: 'Roboto Slab', serif;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#language {
+  color: white;
+  background-color: #222;
+  border: 2px solid white;
+  overflow: hidden;
   font-family: 'Roboto Slab', serif;
   -webkit-transition: 0.5s;
   transition: 0.5s;
